# discord-tauri

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
icons/: icon.icns
scripts/: bundle-macos.sh  create-signing-cert.sh
src/: main.rs
