
cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "discord-tauri"
version = "0.4.0"
description = "Discord, wrapped in Tauri."
authors = ["DrPuc", "eyewave"]
license = "GPLv3"
repository = "https://github.com/eye-wave/discord-tauri"
default-run = "discord-tauri"
edition = "2024"

[package.metadata.bundle]
name = "Discord tauri"
identifier = "discord.tauri"
icon = ["icons/icon.ico", "icons/icon.icns"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["ico"]}
muda = "0.17.1"
tao = { version = "0.35.0" }
tray-icon = "0.21.3"
wry = "0.55.0"

[target.'cfg(target_os = "windows")'.dependencies]
window-shadows = "0.2.2"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
