
cargo-features = ["profile-rustflags", "trim-paths"]

[package]
name = "discord-tauri"
version = "0.4.0"
description = "Discord, wrapped in Tauri."
authors = ["DrPuc", "eyewave"]
license = "GPLv3"
repository = "https://github.com/eye-wave/discord-tauri"
default-run = "discord-tauri"
edition = "2024"

[package.metadata.bundle]
name = "Discord tauri"
identifier = "discord.tauri"
icon = ["icons/icon.ico", "icons/icon.icns"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = ["ico", "png"]}
muda = "0.19.1"
tao = { version = "0.35.2" }
tray-icon = "0.24.0"
wry = { version = "0.55.1", features = ["devtools", "fullscreen"] }

[target.'cfg(target_os = "windows")'.dependencies]
window-shadows = "0.2.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile", "NSImage", "NSColor", "NSWindow", "NSResponder", "NSAppearance", "NSView", "objc2-core-graphics"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "objc2-core-graphics"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
trim-paths = "all"
rustflags = ["-Cdebuginfo=0", "-Zthreads=8"]
